SC2-33 [iOS] Modify Shipping Orders

--- a/DMSDriver/DMSDriver/App/RouteListVC/Cell/tableViewCell/RouteTableViewCell.xib
+++ b/DMSDriver/DMSDriver/App/RouteListVC/Cell/tableViewCell/RouteTableViewCell.xib
@@ -17,7 +17,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RouteTableViewCell" rowHeight="400" id="KGk-i7-Jjw" customClass="RouteTableViewCell" customModule="Gadot_Dev" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RouteTableViewCell" rowHeight="400" id="KGk-i7-Jjw" customClass="RouteTableViewCell" customModule="Gadot_Live" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="400"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -107,20 +107,20 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="eSw-8O-ha8">
                                 <rect key="frame" x="10" y="74.5" width="260" height="230.5"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nn9-Vp-y6U" userLabel="Trailer Tanker">
-                                        <rect key="frame" x="0.0" y="0.0" width="260" height="50"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lNi-Fq-Mc4" userLabel="Truck Type">
+                                        <rect key="frame" x="0.0" y="0.0" width="260" height="130.5"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Trailer/Tanker" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n3b-yN-6Rk">
-                                                <rect key="frame" x="0.0" y="4" width="85.5" height="42"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Truck" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iZj-d8-sFe">
+                                                <rect key="frame" x="0.0" y="57.5" width="34.5" height="16"/>
                                                 <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                 <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                                 <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="trailer-tanker"/>
+                                                    <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="Truck"/>
                                                 </userDefinedRuntimeAttributes>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ENH-Dw-32P">
-                                                <rect key="frame" x="225.5" y="17" width="34.5" height="16"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DEc-1u-ETY">
+                                                <rect key="frame" x="225.5" y="57.5" width="34.5" height="16"/>
                                                 <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -128,16 +128,15 @@
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstItem="n3b-yN-6Rk" firstAttribute="centerY" secondItem="nn9-Vp-y6U" secondAttribute="centerY" id="2c0-Vb-KUA"/>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="CRl-kG-qGc"/>
-                                            <constraint firstAttribute="trailing" secondItem="ENH-Dw-32P" secondAttribute="trailing" id="bbJ-m0-zzv"/>
-                                            <constraint firstItem="n3b-yN-6Rk" firstAttribute="leading" secondItem="nn9-Vp-y6U" secondAttribute="leading" id="gHw-NC-z1Y"/>
-                                            <constraint firstItem="n3b-yN-6Rk" firstAttribute="top" secondItem="nn9-Vp-y6U" secondAttribute="top" constant="4" id="sxE-NP-Jlb"/>
-                                            <constraint firstItem="ENH-Dw-32P" firstAttribute="centerY" secondItem="n3b-yN-6Rk" secondAttribute="centerY" id="tgH-Q1-jRP"/>
+                                            <constraint firstItem="DEc-1u-ETY" firstAttribute="centerY" secondItem="iZj-d8-sFe" secondAttribute="centerY" id="8Gx-aE-8tM"/>
+                                            <constraint firstItem="iZj-d8-sFe" firstAttribute="leading" secondItem="lNi-Fq-Mc4" secondAttribute="leading" id="8tr-Zy-iD4"/>
+                                            <constraint firstItem="iZj-d8-sFe" firstAttribute="centerY" secondItem="lNi-Fq-Mc4" secondAttribute="centerY" id="IDn-nD-sRw"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="UuY-Ks-Zuv"/>
+                                            <constraint firstAttribute="trailing" secondItem="DEc-1u-ETY" secondAttribute="trailing" id="fsz-mA-Q0C"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F6X-Ue-x6D" userLabel="Company">
-                                        <rect key="frame" x="0.0" y="50" width="260" height="50"/>
+                                        <rect key="frame" x="0.0" y="130.5" width="260" height="50"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Company" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q29-xn-Oof">
                                                 <rect key="frame" x="0.0" y="4" width="60" height="42"/>
@@ -165,20 +164,20 @@
                                             <constraint firstAttribute="trailing" secondItem="DSM-BZ-Bl1" secondAttribute="trailing" id="P5e-HI-ebf"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lNi-Fq-Mc4" userLabel="Truck Type">
-                                        <rect key="frame" x="0.0" y="100" width="260" height="100.5"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nn9-Vp-y6U" userLabel="Trailer Tanker">
+                                        <rect key="frame" x="0.0" y="180.5" width="260" height="50"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Truck" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iZj-d8-sFe">
-                                                <rect key="frame" x="0.0" y="42.5" width="34.5" height="16"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Trailer/Tanker" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n3b-yN-6Rk">
+                                                <rect key="frame" x="0.0" y="4" width="85.5" height="42"/>
                                                 <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                 <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                                 <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="Truck"/>
+                                                    <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="trailer-tanker"/>
                                                 </userDefinedRuntimeAttributes>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DEc-1u-ETY">
-                                                <rect key="frame" x="225.5" y="42.5" width="34.5" height="16"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ENH-Dw-32P">
+                                                <rect key="frame" x="225.5" y="17" width="34.5" height="16"/>
                                                 <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -186,15 +185,16 @@
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstItem="DEc-1u-ETY" firstAttribute="centerY" secondItem="iZj-d8-sFe" secondAttribute="centerY" id="8Gx-aE-8tM"/>
-                                            <constraint firstItem="iZj-d8-sFe" firstAttribute="leading" secondItem="lNi-Fq-Mc4" secondAttribute="leading" id="8tr-Zy-iD4"/>
-                                            <constraint firstItem="iZj-d8-sFe" firstAttribute="centerY" secondItem="lNi-Fq-Mc4" secondAttribute="centerY" id="IDn-nD-sRw"/>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="UuY-Ks-Zuv"/>
-                                            <constraint firstAttribute="trailing" secondItem="DEc-1u-ETY" secondAttribute="trailing" id="fsz-mA-Q0C"/>
+                                            <constraint firstItem="n3b-yN-6Rk" firstAttribute="centerY" secondItem="nn9-Vp-y6U" secondAttribute="centerY" id="2c0-Vb-KUA"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="CRl-kG-qGc"/>
+                                            <constraint firstAttribute="trailing" secondItem="ENH-Dw-32P" secondAttribute="trailing" id="bbJ-m0-zzv"/>
+                                            <constraint firstItem="n3b-yN-6Rk" firstAttribute="leading" secondItem="nn9-Vp-y6U" secondAttribute="leading" id="gHw-NC-z1Y"/>
+                                            <constraint firstItem="n3b-yN-6Rk" firstAttribute="top" secondItem="nn9-Vp-y6U" secondAttribute="top" constant="4" id="sxE-NP-Jlb"/>
+                                            <constraint firstItem="ENH-Dw-32P" firstAttribute="centerY" secondItem="n3b-yN-6Rk" secondAttribute="centerY" id="tgH-Q1-jRP"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P56-9N-QXc" userLabel="Load Volume">
-                                        <rect key="frame" x="0.0" y="200.5" width="260" height="30"/>
+                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P56-9N-QXc" userLabel="Load Volume">
+                                        <rect key="frame" x="0.0" y="230.5" width="260" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Load Volume" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="as3-H4-JYR">
                                                 <rect key="frame" x="0.0" y="7" width="82" height="16"/>
