--- a/DMSDriver/DMSDriver/Resources/Storyboards/Route.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Route.storyboard
@@ -2273,10 +2273,10 @@
                                                                                                     <nil key="highlightedColor"/>
                                                                                                 </label>
                                                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bPC-T9-QHu">
-                                                                                                    <rect key="frame" x="0.0" y="47" width="375" height="3"/>
+                                                                                                    <rect key="frame" x="0.0" y="48" width="375" height="2"/>
                                                                                                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                                                                     <constraints>
-                                                                                                        <constraint firstAttribute="height" constant="3" id="7ng-lg-w76"/>
+                                                                                                        <constraint firstAttribute="height" constant="2" id="7ng-lg-w76"/>
                                                                                                     </constraints>
                                                                                                 </view>
                                                                                             </subviews>
@@ -2289,11 +2289,6 @@
                                                                                                 <constraint firstItem="bPC-T9-QHu" firstAttribute="leading" secondItem="27h-II-j5w" secondAttribute="leading" id="gwF-Jg-zUS"/>
                                                                                                 <constraint firstItem="hXo-qe-iZP" firstAttribute="centerY" secondItem="27h-II-j5w" secondAttribute="centerY" id="pyk-9K-DSp"/>
                                                                                             </constraints>
-                                                                                            <userDefinedRuntimeAttributes>
-                                                                                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                                                                    <real key="value" value="8"/>
-                                                                                                </userDefinedRuntimeAttribute>
-                                                                                            </userDefinedRuntimeAttributes>
                                                                                         </view>
                                                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Vot-V5-wx1">
                                                                                             <rect key="frame" x="15" y="50" width="345" height="120"/>
@@ -2482,13 +2477,13 @@
                                                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                                                 <subviews>
                                                                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="7mN-PJ-7yE">
-                                                                                                        <rect key="frame" x="15" y="0.0" width="345" height="49.5"/>
+                                                                                                        <rect key="frame" x="15" y="0.0" width="345" height="39.5"/>
                                                                                                         <subviews>
                                                                                                             <view contentMode="scaleToFill" horizontalHuggingPriority="252" verticalHuggingPriority="252" translatesAutoresizingMaskIntoConstraints="NO" id="iHY-8q-NgL">
-                                                                                                                <rect key="frame" x="0.0" y="0.0" width="172.5" height="49.5"/>
+                                                                                                                <rect key="frame" x="0.0" y="0.0" width="172.5" height="39.5"/>
                                                                                                                 <subviews>
                                                                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="5000.00L" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h6S-hH-sDZ">
-                                                                                                                        <rect key="frame" x="0.0" y="0.0" width="172.5" height="49.5"/>
+                                                                                                                        <rect key="frame" x="0.0" y="0.0" width="172.5" height="39.5"/>
                                                                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                                                                                                         <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
@@ -2509,10 +2504,10 @@
                                                                                                                 </userDefinedRuntimeAttributes>
                                                                                                             </view>
                                                                                                             <view contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="H0P-IP-heQ">
-                                                                                                                <rect key="frame" x="172.5" y="0.0" width="172.5" height="49.5"/>
+                                                                                                                <rect key="frame" x="172.5" y="0.0" width="172.5" height="39.5"/>
                                                                                                                 <subviews>
                                                                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Compartment ID: 154" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yOd-6q-d8a">
-                                                                                                                        <rect key="frame" x="0.0" y="0.0" width="172.5" height="49.5"/>
+                                                                                                                        <rect key="frame" x="0.0" y="0.0" width="172.5" height="39.5"/>
                                                                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                                                                                                         <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
@@ -2530,13 +2525,23 @@
                                                                                                         </subviews>
                                                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                                     </stackView>
+                                                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m5A-Qo-jMl">
+                                                                                                        <rect key="frame" x="0.0" y="38.5" width="375" height="1"/>
+                                                                                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                                                                                        <constraints>
+                                                                                                            <constraint firstAttribute="height" constant="1" id="M8k-d5-qjK"/>
+                                                                                                        </constraints>
+                                                                                                    </view>
                                                                                                 </subviews>
                                                                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                                 <constraints>
+                                                                                                    <constraint firstAttribute="bottom" secondItem="m5A-Qo-jMl" secondAttribute="bottom" id="54Q-5Q-lwG"/>
                                                                                                     <constraint firstAttribute="trailing" secondItem="7mN-PJ-7yE" secondAttribute="trailing" constant="15" id="KaE-jn-8FS"/>
+                                                                                                    <constraint firstAttribute="trailing" secondItem="m5A-Qo-jMl" secondAttribute="trailing" id="Onl-Ik-IcD"/>
                                                                                                     <constraint firstItem="7mN-PJ-7yE" firstAttribute="leading" secondItem="A5m-13-Ifz" secondAttribute="leading" constant="15" id="WDw-yX-xCM"/>
                                                                                                     <constraint firstItem="7mN-PJ-7yE" firstAttribute="top" secondItem="A5m-13-Ifz" secondAttribute="top" id="chf-YY-eEN"/>
                                                                                                     <constraint firstAttribute="bottom" secondItem="7mN-PJ-7yE" secondAttribute="bottom" id="e4U-Em-eDS"/>
+                                                                                                    <constraint firstItem="m5A-Qo-jMl" firstAttribute="leading" secondItem="A5m-13-Ifz" secondAttribute="leading" id="wwV-Hq-Rhb"/>
                                                                                                 </constraints>
                                                                                             </tableViewCellContentView>
                                                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -2614,12 +2619,12 @@
                                                                                                         </subviews>
                                                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                                         <constraints>
-                                                                                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="z5v-ek-9qG"/>
+                                                                                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="z5v-ek-9qG"/>
                                                                                                         </constraints>
                                                                                                     </stackView>
                                                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="01Y-0y-b2v">
                                                                                                         <rect key="frame" x="0.0" y="59" width="375" height="0.5"/>
-                                                                                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                                                                         <constraints>
                                                                                                             <constraint firstAttribute="height" constant="0.5" id="y56-gb-idB"/>
                                                                                                         </constraints>
@@ -2688,6 +2693,7 @@
                                                     <outlet property="iconDropDownWeightConstant" destination="3Bw-X1-ZQp" id="BOZ-UV-foT"/>
                                                     <outlet property="iconPlatenumBtn" destination="E9s-5w-ce9" id="fMd-oM-QSD"/>
                                                     <outlet property="loadPlanInfoHeightConstraint" destination="Bhn-Vb-ER9" id="n5l-Dx-MR4"/>
+                                                    <outlet property="loadplanHeaderView" destination="27h-II-j5w" id="l6Q-0E-k0l"/>
                                                     <outlet property="loadplanInfoView" destination="Vot-V5-wx1" id="f46-wR-AnN"/>
                                                     <outlet property="maxVolumeLbl" destination="iU2-3B-fqa" id="iQZ-Tf-tF8"/>
                                                     <outlet property="platenumBtn" destination="uFp-Te-cyc" id="RmN-Zv-I5Z"/>
